--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,3 +1,107 @@
-<script>
-    window.location.href="mvc/psi/product";
-</script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/layouts/styles.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <style>
+            .report {
+                width: 120px;
+            }
+
+        </style>
+
+    </head>
+
+    <body>
+        <div id="menu">
+            <div class="pure-menu">
+
+                <ul class="pure-menu-list">
+                    <li>
+                        <a href="http://localhost:8080/SpringData_Accessory/index.html" class="pure-menu-link">Home</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:8080/SpringData_Accessory/mvc/psi/product" class="pure-menu-link">Product</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:8080/SpringData_Accessory/mvc/psi/inventory" class="pure-menu-link">Inventory</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:8080/SpringData_Accessory/mvc/psi/purchase" class="pure-menu-link">Purchase</a>
+                    </li>
+                    <li>
+                        <a href="http://localhost:8080/SpringData_Accessory/mvc/psi/sales" class="pure-menu-link">Sales</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+
+        <div class="main">
+
+            <div class="header">
+                <h1> ItBroccoli </h1>
+                <br/>
+                <h2> Accesstory PSI Management System </h2>
+            </div>
+
+            <div class="image-container">
+                <img src="pic/Accessory.jpg" width="800" height="600" alt="Accessory">
+            </div>
+
+
+            <div class="subhead-container">
+
+                <div class="subhead-box" data-url="http://localhost:8080/SpringData_Accessory/mvc/psi/product" onclick="window.location.href = this.getAttribute('data-url');" data-description="Go to 'Product' page">
+                    <img src="pic/Product.jpg" width="250" height="180" alt="Product">
+                    <div class="subhead-content">
+                        <h2 class="content-subhead">Product</h2>
+                        <p style="color:palevioletred; font-size:22px">
+                            You can add, update, delete products in 'Product' page,and check the product list.
+                        </p>
+                        <button class="button-secondary pure-button" onclick="location.href = 'http://localhost:8080/SpringData_Accessory/mvc/psi/product'">Go to 'Product' page</button>
+                    </div>
+                </div>
+
+                <div class="subhead-box" data-url="http://localhost:8080/SpringData_Accessory/mvc/psi/inventory" onclick="window.location.href = this.getAttribute('data-url');" data-description="Go to 'Inventory' page">
+                    <img src="pic/Inventory.jpg" width="250" height="180" alt="Inventory">
+                    <div class="subhead-content">
+                        <h2 class="content-subhead">Inventory</h2>
+                        <p style="color:palevioletred; font-size:22px">
+                            You can check the details of inventory in 'inventory' page,and check the Inventory list.
+                        </p>
+                         <button class="button-secondary pure-button" onclick="location.href = 'http://localhost:8080/SpringData_Accessory/mvc/psi/inventory'">Go to 'Inventory' page</button>
+                    </div>
+                </div>
+
+                <div class="subhead-box" data-url="http://localhost:8080/SpringData_Accessory/mvc/psi/purchase" onclick="window.location.href = this.getAttribute('data-url');" data-description="Go to 'Purchase' page">
+                    <img src="pic/Purchase.jpg" width="250" height="180" alt="Purchase">
+                    <div class="subhead-content">
+                        <h2 class="content-subhead">Purchase</h2>
+                        <p style="color:palevioletred; font-size:22px">
+                            You can purchase products in 'Purchase' page,and check the inventory list and purchase list.
+                        </p>
+                         <button class="button-secondary pure-button" onclick="location.href = 'http://localhost:8080/SpringData_Accessory/mvc/psi/purchase'">Go to 'Purchase' page</button>
+                    </div>
+                </div>
+
+                <div class="subhead-box" data-url="http://localhost:8080/SpringData_Accessory/mvc/psi/sales" onclick="window.location.href = this.getAttribute('data-url');" data-description="Go to 'Sales' page">
+                    <img src="pic/Sales.jpg" width="250" height="180" alt="Sales">
+                    <div class="subhead-content">
+                        <h2 class="content-subhead">Salse</h2>
+                        <p style="color:palevioletred; font-size:22px">
+                            You can salse products in 'Salse' page,and check the inventory list and salse list.
+                        </p>
+                         <button class="button-secondary pure-button" onclick="location.href = 'http://localhost:8080/SpringData_Accessory/mvc/psi/sales'">Go to 'Sales' page</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    
+ <script src="js/ui.js"></script>
+</body>
+</html>
