SpringMVC Improve UI

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -91,9 +91,9 @@
                 <div class="subhead-box" data-url="http://localhost:8080/SpringData_Accessory/mvc/psi/sales" onclick="window.location.href = this.getAttribute('data-url');" data-description="Go to 'Sales' page">
                     <img src="pic/Sales.jpg" width="250" height="180" alt="Sales">
                     <div class="subhead-content">
-                        <h2 class="content-subhead">Salse</h2>
+                        <h2 class="content-subhead">Sales</h2>
                         <p style="color:palevioletred; font-size:22px">
-                            You can salse products in 'Salse' page,and check the inventory list and salse list.
+                            You can sales products in 'Sales' page,and check the inventory list and sales list.
                         </p>
                          <button class="button-secondary pure-button" onclick="location.href = 'http://localhost:8080/SpringData_Accessory/mvc/psi/sales'">Go to 'Sales' page</button>
                     </div>
