SpringMVC Improve UI

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -93,7 +93,7 @@
                     <div class="subhead-content">
                         <h2 class="content-subhead">Sales</h2>
                         <p style="color:palevioletred; font-size:22px">
-                            You can sales products in 'Sales' page,and check the inventory list and sales list.
+                            You can sale products in 'Sales' page,and check the inventory list and sales list.
                         </p>
                          <button class="button-secondary pure-button" onclick="location.href = 'http://localhost:8080/SpringData_Accessory/mvc/psi/sales'">Go to 'Sales' page</button>
                     </div>
